Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Govie</h1>
-        <h2>A command line tool for movie buffs. Instantly access movie pages from IMDB, Know the rating of your favorite movie, Download a poster, Create thumbnail collectionn</h2>
+        <h2>A Linux command line tool for movie buffs. Instantly access movie pages from IMDB, Know the rating and other details of a new movie, Create a movie poster collection with few keystrokes..</h2>
 
         <section id="downloads">
           <a href="https://github.com/narenaryan/Govie/zipball/master" class="btn">Download as .zip</a>
